fixed scaling issue on mobile
Matched about page paragraph body content to look the same as on the homepage.

--- a/css/about.css
+++ b/css/about.css
@@ -42,7 +42,11 @@ hr {
 
 #heading-1 { padding-top: 3em; }
 
-#about p { font-size: 1.2em; }
+#about p {
+    text-align: justify;
+    text-justify: inter-word;
+    font-size: 1.2em;
+}
 
 #contact p{ font-size: 1.2em;}
 
